# vectorfriends_connect

./: README.md  main.py  pyproject.toml  requirements.txt
